--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A web component to easily animate SVG paths.",
   "main": "index.js",
   "scripts": {
-    "start": "npx browser-sync"
+    "start": "npx @11ty/eleventy --serve"
   },
   "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^2.29.3"
+    "@11ty/eleventy": "^2.0.1"
   }
 }
